<resources>
    <string name="app_name">HackathonHomework</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_field_hint">Login</string>
    <string name="password_field_hint">Password</string>
    <string name="registration_title">Registration</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="login_title">Login</string>
    <string name="photo_description">Photo description</string>
</resources>